<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="?attr/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/changeScorecardTitle"
        android:layout_width="282dp"
        android:layout_height="61dp"
        android:layout_marginTop="220dp"
        android:fontFamily="@font/asap_bolditalic"
        android:gravity="center_horizontal"
        android:text="@string/change_scorecard"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addRemovePlayersButton"
        android:layout_width="273dp"
        android:layout_height="73dp"
        android:fontFamily="@font/asap_bold"
        android:onClick="addPlayerClick"
        android:text="@string/add_remove_players"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.484" />

    <Button
        android:id="@+id/addRemoveParButton"
        android:layout_width="273dp"
        android:layout_height="73dp"
        android:fontFamily="@font/asap_bold"
        android:onClick="addParClick"
        android:text="@string/add_remove_par"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <Button
        android:id="@+id/addRemoveHandicapButton"
        android:layout_width="273dp"
        android:layout_height="73dp"
        android:fontFamily="@font/asap_bold"
        android:onClick="addHandicapClick"
        android:text="@string/add_remove_handicap"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.744" />

    <Button
        android:id="@+id/changeHolesButton"
        android:layout_width="273dp"
        android:layout_height="73dp"
        android:fontFamily="@font/asap_bold"
        android:onClick="changeHolesClick"
        android:text="@string/change_holes"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

</androidx.constraintlayout.widget.ConstraintLayout>